# rs-ml

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
docs/: readme.md
examples/: home-price.rs  iris.rs
src/: lib.rs
src/classification/: mod.rs  naive_bayes.rs
src/dimensionality_reduction/: mod.rs  pca.rs
src/metrics/: mod.rs
src/regression/: linear.rs  mod.rs
src/transformer/: embedding.rs  mod.rs  scalers.rs
tests/: integration.rs  iris.rs  tests.rs
